Media/Radarr/radarr.service.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
  annotations:
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 7878
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: radarr
