Media/Radarr/radarr.ingress-traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`radarr.local.flyvmed.dk`) && PathPrefix(`/`)
    kind: Rule
    services:
    - kind: Service
      name: radarr
      namespace: media
      port: 7878
  tls:
    certResolver: letsencrypt
